# nh-planner

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
nh_planner/: config.py  main.py
nh_planner/cli/: app.py  utils.py
nh_planner/cli/commands/: filter.py  get_limited.py  info.py  list_screenings.py  models.py  recommend.py  refresh.py  utils.py
nh_planner/core/: config.py  models.py
nh_planner/db/: data_models.py  database.py  dynamic_scrapper.py  queries.py  utils.py
nh_planner/llm/: agent.py  conversation.py  llm.py  query_generator.py  reasoning.py  utils.py
nh_planner/services/: database.py  embeddings.py  filters.py  get_next_day_date.py  scraper.py
src/: cli.py  constants.py  db.py  dynamic_scrapper.py  llm.py
