[project]
name = "nh-planner"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.12.3",
    "click>=8.1.8",
    "isort>=5.13.2",
    "ollama>=0.4.5",
    "playwright>=1.49.1",
    "requests>=2.32.3",
    "rich>=13.9.4",
    "ruff>=0.8.4",
    "tqdm>=4.67.1",
]
